# text-embeddings

./: .gitignore  README.md  flake.nix  mypy.ini  pyproject.toml  query.sql
src/: __main__.py  configure_logger.py  embed.py  event.py  fetch.py  message.py  query.py  service.py  store.py  token_rate_limiter.py
src/lib/: pipeline.py  service_wrapper.py  tuple_mapper.py
src/services/: fetch.py  query.py
test/: main.py
test/lib/: test_tuple_mapper.py
